test/fail/parameter-pattern-fail.grace
method name(param : type { name }) {}

name(object {})
